@@ -537,31 +537,6 @@ static SLang_IConstant_Type Termios_Consts [] =
    SLANG_END_ICONST_TABLE
 };
 
-static void patchup_intrinsic_table (SLang_Intrin_Fun_Type *table, 
-				     SLtype dummy, SLtype type)
-{
-   while (table->name != NULL)
-     {
-	unsigned int i, nargs;
-	SLtype *args;
-	
-	nargs = table->num_args;
-	args = table->arg_types;
-	for (i = 0; i < nargs; i++)
-	  {
-	     if (args[i] == dummy)
-	       args[i] = type;
-	  }
-	
-	/* For completeness */
-	if (table->return_type == dummy)
-	  table->return_type = type;
-
-	table++;
-     }
-}
-
-
 static int register_termios_type (void)
 {
    SLang_Class_Type *cl;
@@ -585,8 +560,9 @@ static int register_termios_type (void)
      return -1;
 
    Termios_Type_Id = SLclass_get_class_id (cl);
-   patchup_intrinsic_table (Termios_Intrinsics, DUMMY_TERMIOS_TYPE, Termios_Type_Id);
-
+   if (-1 == SLclass_patch_intrin_fun_table1 (Termios_Intrinsics, DUMMY_TERMIOS_TYPE, Termios_Type_Id))
+     return -1;
+       
    return 0;
 }
 
