@@ -235,6 +235,11 @@ Changes since 2.0.7
 80. src/slstd.c: __is_numeric was not returning 3 for Complex_Type.
 81. src/slexcept.c: Do not log traeback messages unless _traceback is
     non-zero.
+82. src/slclass.c: Added SLclass_patch_intrin_fun_table to the library
+    and modified the code in modules/ to make use of this function.
+83. src/slang.c: SLang_Traceback is now a bitmapped variable, but
+    defined in a backward compatible manner.  See slang.h and the
+    documentation for the _traceback variable for more information.
 
 {{{ Previous Versions
 
